<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoBackup</string>
    <string name="app_version">PhotoBackup version %1$s</string>

    <string name="service_title">Service</string>
    <string name="service_state_running">PhotoBackup is running.</string>
    <string name="service_state_not_running">PhotoBackup is not running.</string>
    <string name="service_stopped">PhotoBackup has stopped.</string>

    <string name="server_pref_title">Configure a server</string>
    <string name="server_pref_summary">No server</string>
    <string name="server_url_title">Address</string>
    <string name="server_url_summary">The address of the server.</string>
    <string name="server_password_title">Password</string>
    <string name="server_password_summary">The password of the server.</string>
    <string name="server_password_summary_set">The password is set.</string>

    <string name="only_wifi_title">Backup</string>
    <string name="only_wifi">Over Wi-Fi only</string>
    <string name="not_only_wifi">Over Wi-Fi or mobile network</string>
    <string name="only_nearby_wifi">Over a nearby Wi-Fi only</string>
    <string name="only_wifi_ssid">Over %1$s Wi-Fi only</string>
    <string name="only_wifi_default">@string/only_wifi</string>

    <string name="only_recent_upload_title">Pictures to upload</string>
    <string name="only_recent_upload">Newly taken only</string>
    <string name="not_only_recent_upload">All pictures of the device</string>
    <string name="only_recent_upload_default">@string/only_recent_upload</string>

    <string name="toast_urisyntaxexception">The server address is invalid!</string>
    <string name="toast_serverpassempty">The password cannot be empty!</string>
    <string name="toast_test_configuration">Testing server</string>
    <string name="toast_configuration_ok">Server configuration is valid, great!</string>
    <string name="toast_configuration_ko">Server test failed, please verify your configuration.</string>
    <string name="toast_read_pictures_not_granted">PhotoBackup cannot work properly without the permission to read your pictures.</string>
    <string name="toast_access_location_not_granted">PhotoBackup cannot scan wifi networks without location permission.</string>

    <string name="info_conf">Informations</string>
    <string name="journal_title">Upload journal</string>
    <string name="journal_noaccess">Launch the service to access the journal.</string>
    <string name="journal_backedup">Saved</string>
    <string name="journal_waiting">Waiting</string>
    <string name="journal_error">Error</string>

    <string name="about_title">About</string>
    <string name="about_text">PhotoBackup for Android backups the pictures of this device
    on your home server. This way, you are the unique owner and user of your pictures.
    To install and configure a server, see:</string>

    <string name="notif_start_text">Your photo is being backed up on your server.</string>
    <plurals name="notif_success">
        <item quantity="zero"> </item>
        <item quantity="other">%d on your server</item>
    </plurals>
    <plurals name="notif_failure">
        <item quantity="one">%d failure</item>
        <item quantity="other">%d failures</item>
    </plurals>

    <string name="cancel">Cancel</string>
    <string name="name">Name of the photo</string>
    <string name="thumbnail_description">Thumbnail of the photo</string>
    <string name="stop_service">Stop the service</string>
    <string name="manual_backup_title">Manual backup</string>
    <string name="manual_backup_message">Save this picture now!</string>

</resources>
