<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/synced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip"
            android:contentDescription="@string/thumbnail_description"
            android:src="@android:drawable/presence_online" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="5dip"
            android:layout_marginStart="5dip"
            android:text="@string/journal_backedup" />

        <ImageView
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="15dip"
            android:layout_marginStart="15dip"
            android:contentDescription="@string/thumbnail_description"
            android:src="@android:drawable/presence_away" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="5dip"
            android:layout_marginStart="5dip"
            android:text="@string/journal_waiting" />

        <ImageView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="15dip"
            android:layout_marginStart="15dip"
            android:contentDescription="@string/thumbnail_description"
            android:src="@android:drawable/presence_busy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="5dip"
            android:layout_marginStart="5dip"
            android:text="@string/journal_error" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/journal_title" />

</LinearLayout>
